<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleRg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/title_str" />

    <EditText
        android:id="@+id/usernameEtRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/titleRg"
        android:layout_below="@+id/titleRg"
        android:layout_marginTop="10dp"
        android:ems="10" 
        android:hint="@string/please_username"/>

    <TextView
        android:id="@+id/usernameTvRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernameEtRg"
        android:layout_toLeftOf="@+id/usernameEtRg"
        android:layout_marginRight="10sp"
        android:text="@string/username_str" />

    <EditText
        android:id="@+id/nickEtRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/usernameEtRg"
        android:layout_alignLeft="@+id/usernameEtRg"
        android:layout_below="@+id/usernameEtRg"
        android:layout_marginTop="10sp"
        android:ems="10" />

    <TextView
        android:id="@+id/nickTvRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nickEtRg"
        android:layout_alignBottom="@+id/nickEtRg"
        android:layout_alignRight="@+id/usernameTvRg"
        android:text="@string/nickname_str" />

    <EditText
        android:id="@+id/passwordEtRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nickEtRg"
        android:layout_alignRight="@+id/nickEtRg"
        android:layout_below="@+id/nickEtRg"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordTvRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordEtRg"
        android:layout_alignBottom="@+id/passwordEtRg"
        android:layout_alignRight="@+id/nickTvRg"
        android:text="@string/password_str" />

    <EditText
        android:id="@+id/pdAgainEtRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordEtRg"
        android:layout_below="@+id/passwordEtRg"
        android:ems="10"
        android:layout_marginTop="10sp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/paAgainTvRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pdAgainEtRg"
        android:layout_alignBottom="@+id/pdAgainEtRg"
        android:layout_alignRight="@+id/passwordTvRg"
        android:text="@string/password_again_str" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignRight="@+id/pdAgainEtRg"
        android:layout_below="@+id/pdAgainEtRg"
        android:layout_marginTop="10sp"
        android:src="@drawable/ddm" />

    <EditText
        android:id="@+id/personInfoEtRg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleRg"
        android:layout_alignRight="@+id/titleRg"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/person_info_str"
        android:maxLines="10"
        android:gravity="top|left"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/okRg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="@string/sure_str" />

</RelativeLayout>
